trunk/Archive2/49/dc2948e8e36455/output
main.cpp: In function 'int main()':
main.cpp:30:13: error: 'blue' was not declared in this scope
     myLed = blue;
             ^
main.cpp:33:13: error: 'funny' was not declared in this scope
     myLed = funny;
             ^
main.cpp:34:14: error: 'green' was not declared in this scope
     myMood = green;
              ^
